--- a/source/css/order.css
+++ b/source/css/order.css
@@ -33,8 +33,6 @@
     box-shadow: 2px 2px 5px 1px#888888;
     text-align: center;
     background-color: #0074c3;
-    margin-left: 50vw;
-    margin-right: auto;
     cursor: pointer;
     color: black;
     text-decoration: none;
@@ -55,7 +53,27 @@
     color: #0067ae;
 }
 
+.next-btn-container{
+    margin-left: 87%;
+}
 
+@media (max-width: 1199px){
+    .next-btn-container{
+        margin-left: 85%;
+    }
+}
+
+@media (max-width: 993px){
+    .next-btn-container{
+        margin-left: 80%;
+    }
+}
+
+@media (max-width: 799px){
+    .next-btn-container{
+        margin-left: 64%;
+    }
+}
 
 /*
  * Submit Page
