adjusted postion slightly for submit button on order confirmation and added delivery to post data

--- a/source/css/order.css
+++ b/source/css/order.css
@@ -55,6 +55,7 @@
 
 .next-btn-container{
     margin-left: 87%;
+    margin-top: -2em;
 }
 
 @media (max-width: 1199px){
@@ -72,6 +73,7 @@
 @media (max-width: 799px){
     .next-btn-container{
         margin-left: 64%;
+        margin-top: 0em;
     }
 }
 
