--- a/source/css/products.css
+++ b/source/css/products.css
@@ -107,6 +107,25 @@
 }
 
 
+@media (min-width: 768px){
+  .col-md-4{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@media (min-width: 1000px){
+  .col-md-4{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+}
+
+
 /*
  *  Toast
  */
